# mcp-registry

./: Dockerfile.txt  pyproject.toml
src/: notebook.py  server.py
