[project]
name = "mcp-code-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.1",
    "numpy>=1.22.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "sympy>=1.14.0"
]
